[gd_scene load_steps=4 format=3 uid="uid://ct5rhiipwcucy"]

[ext_resource type="PackedScene" uid="uid://bt445iqt61atd" path="res://addons/HTNDomainManager/PluginSystem/Nodes/BaseNode/htn_base_node.tscn" id="1_ct4yl"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/Nodes/TaskNode/HTNTaskNode.gd" id="2_a5lv0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8r5c2"]

[node name="HTNTaskNode" instance=ExtResource("1_ct4yl")]
title = "Task"
slot/0/left_enabled = true
slot/0/left_type = 2
slot/0/left_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/0/right_enabled = true
slot/0/right_type = 2
slot/0/right_color = Color(0.27451, 0.509804, 0.196078, 1)
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("2_a5lv0")

[node name="Input" parent="HBoxContainer" index="0"]
text = "Action"

[node name="Output" parent="HBoxContainer" index="2"]
text = "Action"

[node name="RequiresWaitingButton" type="CheckButton" parent="." index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Requires Waiting"

[node name="HBoxContainer2" type="HBoxContainer" parent="." index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2" index="0"]
layout_mode = 2
text = "Task Name"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_8r5c2")

[node name="EditButton" type="Button" parent="HBoxContainer2" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit File"

[node name="TaskOptionButton" type="OptionButton" parent="." index="4"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "N/A"
popup/item_0/disabled = true

[connection signal="toggled" from="RequiresWaitingButton" to="." method="_on_requires_waiting_button_toggled"]
[connection signal="pressed" from="HBoxContainer2/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="item_selected" from="TaskOptionButton" to="." method="_on_task_option_button_item_selected"]
